Mon Oct  2 11:16:32 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in (V5_MAKE_SHARED_LIB): Add version number 0.1 for
		library creation. 

	* Makefile.in (clean-unix): Remove DONE

Mon Sep 25 16:41:50 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Wed Sep 20 12:00:00 1995	James Mattly <mattly@fusion.com>

	* com_err.c:  Mac UI improvements, added a hilite arround the default button,
		also made the window respond to enter, return, and escape keys.

Fri Sep 22 19:58:22 1995  Theodore Y. Ts'o  <tytso@dcl>

	* error_message.c (sys_nerr): Only define sys_nerr if we're on a
		Macintosh.  On those systems which use sys_nerr, it's an
		external variable, defined by libc.  Under Windows, it's
		apparently an cpp macro.

Mon Aug  7 19:22:52 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (compile_et): Add $(SHELL) to invocation of
		config_script, so that the tree can build even after
		checked into a broken SCCS system.

Thu Jul 13 15:40:56 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* com_err.h: error_message should be const char * (as it is in
        error_message.c), not char const * (as currently presented).

Alspo, since error_message
ets declared const even on non-ansi compilers, set the return type that way so AIX cc doesn't barf.	

Wed Jul 12 12:37:24 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* error_message.c: Do not include stdlib.h unless it exists

Fri Jul 7 16:42:20 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Add DEPLIBS, needed by shared library rule.

Wed July  5 15:52:31 1995  James Mattly  <mattly@fusion.com>
	* com_err.[ch] added _MACINTOSH conditional
	* vsprintf.h added inclusion of stdarg.h for _MACINTSOH

Fri Jun 23 20:08:16 1995  Tom Yu  (tlyu@dragons-lair)

	* configure.in: fix typo; appended "all" rule needs two colons to
		keep gmake from breaking.

Thu Jun 22 16:14:25 1995  Tom Yu  (tlyu@dragons-lair)
