@@ -1,3 +1,9 @@
+Mon Oct  2 15:22:01 1995  Theodore Y. Ts'o  <tytso@dcl>
+
+	* error_message.c (error_message): Fix logic if #ifdefs for
+		HAVE_STRERROR and HAVE_SYS_ERRLIST.  strerror() is used in
+		preference to sys_errlist().
+
 Mon Oct  2 11:16:32 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* configure.in (V5_MAKE_SHARED_LIB): Add version number 0.1 for
